@@ -94,11 +94,19 @@
       </fieldset>
 
       <fieldset>
-        <legend>Verify email</legend>
-        <label>
-          <input type="checkbox" name="verify_email" value="true"
-                 checked="${verify_email and 'checked' or None}" />
-          Force users to verify their email addresses.</label>
+        <legend>Account Verification</legend>
+          <div class="field">
+            <label>
+              <input type="checkbox" name="require_approval" value="true"
+                     checked="${require_approval and 'checked' or None}" />
+              Require administrative approval for new registrations.</label>
+          </div>
+          <div class="field">
+            <label>
+              <input type="checkbox" name="verify_email" value="true"
+                     checked="${verify_email and 'checked' or None}" />
+              Force users to verify their email addresses.</label>
+          </div>
       </fieldset>
 
       <fieldset>
